--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Heading</h1>
 <h1>Hello there!</h1>
+<img src= "https://i.natgeofe.com/n/4f5aaece-3300-41a4-b2a8-ed2708a0a27c/domestic-dog_thumb_4x3.jpg" alt="dog" />
